Add card transition

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 </head>
 
 <body>
-    <section class="section-pink">
+    <section class="section-bg-pink">
+        <div class="content-container">
 
+            <div class="card">
+
+                <h1>
+                    Lorem ipsum dolor.
+                </h1>
+
+            </div>
+        </div>
     </section>
 </body>
 
