--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 </head>
 
 <body>
-    <section class="section-bg-pink">
+    <section class="page section-bg-pink">
         <div class="content-container">
 
             <div class="card">
-
                 <h1>
                     Lorem ipsum dolor.
                 </h1>
-
             </div>
         </div>
     </section>
